tests/test_parsing_compound_literal/c_parser.output
   0  $accept : file $end

   1  primary_expr : IDENTIFIER
   2               | CHAR_LITERAL
   3               | CONSTANT
   4               | LONG_CONSTANT
   5               | FLOAT_CONSTANT
   6               | DOUBLE_CONSTANT
   7               | string_literals
   8               | '(' expr ')'
   9               | '(' compound_statement ')'
  10               | COMPL_OTHER_NAME

  11  string_literals : STRING_LITERAL
  12                  | STRING_LITERAL string_literals

  13  postfix_expr : primary_expr
  14               | postfix_expr '[' expr ']'

  15  $$1 :

  16  postfix_expr : postfix_expr $$1 '(' argument_expr_list_opt ')'

  17  $$2 :

  18  postfix_expr : postfix_expr $$2 '.' str_rec_identifier

  19  $$3 :

  20  postfix_expr : postfix_expr $$3 PTR_OP str_rec_identifier
  21               | postfix_expr INC_OP
  22               | postfix_expr DEC_OP
  23               | compound_literal

  24  compound_literal : '(' type_name ')' '{' initializer_list '}'
  25                   | '(' type_name ')' '{' initializer_list ',' '}'

  26  str_rec_identifier : identifier
  27                     | COMPL_STRUCT_REC_NAME

  28  argument_expr_list_opt :
  29                         | argument_expr_list

  30  argument_expr_list : assignment_expr
  31                     | argument_expr_list ',' assignment_expr
  32                     | COMPL_UP_FUN_PROFILE
  33                     | argument_expr_list ',' COMPL_UP_FUN_PROFILE

  34  unary_expr : postfix_expr
  35             | INC_OP unary_expr
  36             | DEC_OP unary_expr
  37             | unary_operator cast_expr
  38             | '&' cast_expr
  39             | '*' cast_expr
  40             | SIZEOF unary_expr
  41             | SIZEOF '(' type_name ')'
  42             | AND_OP identifier

  43  unary_operator : '+'
  44                 | '-'
  45                 | '~'
  46                 | '!'

  47  cast_expr : unary_expr
  48            | '(' type_name ')' cast_expr

  49  multiplicative_expr : cast_expr
  50                      | multiplicative_expr '*' cast_expr
  51                      | multiplicative_expr '/' cast_expr
  52                      | multiplicative_expr '%' cast_expr

  53  additive_expr : multiplicative_expr
  54                | additive_expr '+' multiplicative_expr
  55                | additive_expr '-' multiplicative_expr

  56  shift_expr : additive_expr
  57             | shift_expr LEFT_OP additive_expr
  58             | shift_expr RIGHT_OP additive_expr

  59  relational_expr : shift_expr
  60                  | relational_expr '<' shift_expr
  61                  | relational_expr '>' shift_expr
  62                  | relational_expr LE_OP shift_expr
  63                  | relational_expr GE_OP shift_expr

  64  equality_expr : relational_expr
  65                | equality_expr EQ_OP relational_expr
  66                | equality_expr NE_OP relational_expr

  67  and_expr : equality_expr
  68           | and_expr '&' equality_expr

  69  exclusive_or_expr : and_expr
  70                    | exclusive_or_expr '^' and_expr

  71  inclusive_or_expr : exclusive_or_expr
  72                    | inclusive_or_expr '|' exclusive_or_expr

  73  logical_and_expr : inclusive_or_expr
  74                   | logical_and_expr AND_OP inclusive_or_expr

  75  logical_or_expr : logical_and_expr
  76                  | logical_or_expr OR_OP logical_and_expr

  77  conditional_expr : logical_or_expr
  78                   | logical_or_expr '?' logical_or_expr ':' conditional_expr
  79                   | logical_or_expr '?' ':' conditional_expr

  80  assignment_expr : conditional_expr
  81                  | unary_expr assignment_operator assignment_expr

  82  assignment_operator : '='
  83                      | MUL_ASSIGN
  84                      | DIV_ASSIGN
  85                      | MOD_ASSIGN
  86                      | ADD_ASSIGN
  87                      | SUB_ASSIGN
  88                      | LEFT_ASSIGN
  89                      | RIGHT_ASSIGN
  90                      | AND_ASSIGN
  91                      | XOR_ASSIGN
  92                      | OR_ASSIGN

  93  expr : assignment_expr
  94       | expr ',' assignment_expr

  95  constant_expr : conditional_expr

  96  Sv_tmp :

  97  declaration : Sv_tmp declaration_specifiers ';'
  98              | Sv_tmp init_declarations ';'
  99              | error

 100  init_declarations : declaration_specifiers init_declarator eq_initializer_opt
 101                    | init_declarations ',' init_declarator eq_initializer_opt
 102                    | error

 103  declaration_specifiers : declaration_modality_specifiers
 104                         | declaration_specifiers0

 105  user_defined_type : TYPE_NAME

 106  declaration_specifiers0 : user_defined_type
 107                          | type_specifier1
 108                          | type_specifier2
 109                          | declaration_modality_specifiers user_defined_type
 110                          | declaration_modality_specifiers type_specifier1
 111                          | declaration_modality_specifiers type_specifier2
 112                          | declaration_specifiers0 type_modality_specifier
 113                          | declaration_specifiers0 type_specifier1
 114                          | declaration_specifiers0 type_specifier2
 115                          | declaration_specifiers0 storage_class_specifier
 116                          | declaration_specifiers0 function_specifier
 117                          | COMPL_TYPE_NAME
 118                          | declaration_modality_specifiers COMPL_TYPE_NAME

 119  declaration_modality_specifiers : storage_class_specifier
 120                                  | declaration_modality_specifiers storage_class_specifier
 121                                  | type_modality_specifier
 122                                  | declaration_modality_specifiers type_modality_specifier
 123                                  | function_specifier
 124                                  | declaration_modality_specifiers function_specifier

 125  asm_opt :
 126          | ASM_KEYWORD '(' string_literals ')'

 127  eq_initializer_opt :
 128                     | '=' initializer

 129  init_declarator : declarator asm_opt

 130  storage_class_specifier : TYPEDEF
 131                          | EXTERN
 132                          | STATIC
 133                          | _THREADLOCAL
 134                          | AUTO
 135                          | REGISTER

 136  type_modality_specifier : CONST
 137                          | RESTRICT
 138                          | VOLATILE
 139                          | _ATOMIC
 140                          | ANONYME_MOD

 141  type_modality_specifier_opt :
 142                              | type_modality_specifier

 143  type_specifier1 : CHAR
 144                  | SHORT
 145                  | INT
 146                  | LONG
 147                  | SIGNED
 148                  | UNSIGNED
 149                  | FLOAT
 150                  | DOUBLE
 151                  | VOID
 152                  | _BOOL

 153  type_specifier2 : struct_or_union_specifier
 154                  | enum_specifier

 155  function_specifier : INLINE
 156                     | _NORETURN

 157  struct_or_union_specifier : struct_or_union struct_identifier
 158                            | struct_or_union_define_specifier '{' struct_declaration_list '}'
 159                            | struct_or_union_define_specifier '{' '}'

 160  struct_or_union_define_specifier : struct_or_union struct_identifier
 161                                   | struct_or_union

 162  struct_identifier : identifier
 163                    | COMPL_STRUCT_NAME

 164  struct_or_union : STRUCT
 165                  | UNION

 166  struct_declaration_list : struct_declaration
 167                          | struct_declaration_list struct_declaration

 168  struct_declaration : Sv_tmp type_specifier_list struct_declarator_list ';'
 169                     | error

 170  struct_declarator_list : struct_declarator
 171                         | struct_declarator_list ',' struct_declarator

 172  struct_declarator :
 173                    | ':' constant_expr
 174                    | declarator
 175                    | declarator ':' constant_expr

 176  enum_specifier : ENUM enum_identifier
 177                 | enum_define_specifier '{' enumerator_list_comma '}'
 178                 | ENUM '{' enumerator_list_comma '}'

 179  enum_define_specifier : ENUM enum_identifier

 180  enum_identifier : identifier
 181                  | COMPL_ENUM_NAME

 182  enumerator_list_comma : enumerator_list
 183                        | enumerator_list ','

 184  enumerator_list : enumerator
 185                  | enumerator_list ',' enumerator

 186  enumerator : identifier
 187             | identifier '=' constant_expr
 188             | error
 189             | COMPL_OTHER_NAME

 190  declarator : declarator2
 191             | pointer declarator2

 192  declarator2 : identifier
 193              | '(' declarator ')'
 194              | declarator2 '[' ']'
 195              | declarator2 '[' constant_expr ']'
 196              | declarator2 '(' ')'
 197              | declarator2 '(' parameter_type_list ')'
 198              | declarator2 '(' parameter_identifier_list ')'
 199              | COMPL_OTHER_NAME

 200  pointer : '*'
 201          | '*' type_mod_specifier_list
 202          | '*' pointer
 203          | '*' type_mod_specifier_list pointer

 204  type_mod_specifier_list : type_modality_specifier
 205                          | type_mod_specifier_list type_modality_specifier

 206  type_specifier_list : type_mod_specifier_list
 207                      | type_specifier_list0

 208  type_specifier_list0 : user_defined_type
 209                       | type_specifier1
 210                       | type_specifier2
 211                       | type_mod_specifier_list user_defined_type
 212                       | type_mod_specifier_list type_specifier1
 213                       | type_mod_specifier_list type_specifier2
 214                       | type_specifier_list0 type_modality_specifier
 215                       | type_specifier_list0 type_specifier1
 216                       | type_specifier_list0 type_specifier2
 217                       | COMPL_TYPE_NAME
 218                       | type_mod_specifier_list COMPL_TYPE_NAME

 219  parameter_identifier_list : identifier_list
 220                            | identifier_list ',' ELIPSIS

 221  identifier_list : IDENTIFIER
 222                  | identifier_list ',' identifier
 223                  | COMPL_OTHER_NAME

 224  parameter_type_list : parameter_list
 225                      | parameter_list ',' ELIPSIS

 226  parameter_list : parameter_declaration
 227                 | parameter_list ',' parameter_declaration

 228  parameter_declaration : declaration_specifiers declarator
 229                        | type_name
 230                        | error

 231  type_name : declaration_specifiers
 232            | declaration_specifiers abstract_declarator

 233  abstract_declarator : pointer
 234                      | abstract_declarator2
 235                      | pointer abstract_declarator2

 236  abstract_declarator2 : '(' abstract_declarator ')'
 237                       | '[' ']'
 238                       | '[' constant_expr ']'
 239                       | abstract_declarator2 '[' ']'
 240                       | abstract_declarator2 '[' constant_expr ']'
 241                       | '(' ')'
 242                       | '(' parameter_type_list ')'
 243                       | abstract_declarator2 '(' ')'
 244                       | abstract_declarator2 '(' parameter_type_list ')'

 245  initializer : assignment_expr
 246              | '{' initializer_list '}'
 247              | '{' initializer_list ',' '}'
 248              | error

 249  initializer_list : Sv_tmp designation_opt Start_block initializer Stop_block
 250                   | initializer_list ',' Sv_tmp designation_opt Start_block initializer Stop_block

 251  designation_opt :
 252                  | designator_list '='

 253  designator_list : designator
 254                  | designator_list designator

 255  designator : '[' constant_expr ']'
 256             | '.' str_rec_identifier

 257  statement : Sv_tmp labeled_statement
 258            | Sv_tmp compound_statement
 259            | Sv_tmp expression_statement
 260            | Sv_tmp selection_statement
 261            | Sv_tmp iteration_statement
 262            | Sv_tmp jump_statement
 263            | Sv_tmp asm_statement
 264            | Sv_tmp error

 265  label : label_def_name ':'
 266        | CASE constant_expr ':'
 267        | CASE constant_expr ELIPSIS constant_expr ':'
 268        | DEFAULT ':'

 269  labeled_statement : label statement

 270  label_def_name : identifier
 271                 | COMPL_LABEL_NAME

 272  label_name : identifier
 273             | COMPL_LABEL_NAME

 274  compound_statement : '{' '}'
 275                     | '{' Start_block label_decls_opt statement_list Stop_block '}'

 276  label_decls_opt :
 277                  | label_decls

 278  label_decls : LABEL identifier
 279              | label_decls LABEL identifier

 280  statement_list : statement
 281                 | statement_list statement
 282                 | declaration
 283                 | statement_list declaration

 284  maybe_expr :
 285             | expr

 286  expression_statement : maybe_expr ';'

 287  _ncounter_ :

 288  _nlabel_ :

 289  _ngoto_ :

 290  _nfork_ :

 291  selection_statement : IF '(' expr ')' _nfork_ statement

 292  $$4 :

 293  selection_statement : IF '(' expr ')' _nfork_ statement ELSE _ngoto_ $$4 statement

 294  $$5 :

 295  $$6 :

 296  selection_statement : SWITCH '(' expr ')' _ncounter_ $$5 $$6 statement

 297  for1maybe_expr : maybe_expr

 298  $$7 :

 299  $$8 :

 300  iteration_statement : WHILE _nlabel_ '(' expr ')' _nfork_ $$7 $$8 statement

 301  $$9 :

 302  $$10 :

 303  $$11 :

 304  iteration_statement : DO _nlabel_ _ncounter_ _ncounter_ $$9 $$10 statement WHILE $$11 '(' expr ')' ';'

 305  $$12 :

 306  $$13 :

 307  iteration_statement : FOR '(' for1maybe_expr ';' _nlabel_ maybe_expr ';' _ngoto_ _nlabel_ maybe_expr ')' _nfork_ $$12 $$13 statement
 308                      | FOR '(' for1maybe_expr ';' COMPL_FOR_SPECIAL1
 309                      | FOR '(' for1maybe_expr ';' _nlabel_ maybe_expr ';' COMPL_FOR_SPECIAL2

 310  jump_statement : GOTO label_name ';'
 311                 | CONTINUE ';'
 312                 | BREAK ';'
 313                 | RETURN ';'
 314                 | RETURN expr ';'

 315  _bef_ :

 316  gcc_asm_symbolic_name_opt :
 317                            | '[' IDENTIFIER ']'

 318  gcc_asm_item_opt :
 319                   | gcc_asm_symbolic_name_opt IDENTIFIER
 320                   | gcc_asm_symbolic_name_opt IDENTIFIER '(' expr ')'
 321                   | gcc_asm_symbolic_name_opt string_literals
 322                   | gcc_asm_symbolic_name_opt string_literals '(' expr ')'

 323  gcc_asm_item_list : gcc_asm_item_opt
 324                    | gcc_asm_item_list ',' gcc_asm_item_opt

 325  gcc_asm_oper : ':' gcc_asm_item_list
 326               | gcc_asm_oper ':' gcc_asm_item_list

 327  asm_statement : ASM_KEYWORD type_modality_specifier_opt '(' expr ')' ';'
 328                | ASM_KEYWORD type_modality_specifier_opt '(' expr gcc_asm_oper ')' ';'

 329  file : _bef_
 330       | _bef_ cached_external_definition_list _bef_

 331  cached_external_definition_list : external_definition
 332                                  | cached_external_definition_list _bef_ external_definition
 333                                  | error

 334  external_definition : Sv_tmp declaration_specifiers ';'
 335                      | Sv_tmp top_init_declarations ';'

 336  $$14 :

 337  external_definition : Sv_tmp function_definition_head $$14 compound_statement
 338                      | Sv_tmp EXTERN STRING_LITERAL external_definition
 339                      | Sv_tmp EXTERN STRING_LITERAL '{' cached_external_definition_list '}'
 340                      | Sv_tmp ASM_KEYWORD '(' expr ')' ';'
 341                      | Sv_tmp error compound_statement
 342                      | Sv_tmp error
 343                      | Sv_tmp ';'

 344  top_init_declarations : declaration_specifiers init_declarator eq_initializer_opt
 345                        | init_declarator eq_initializer_opt
 346                        | top_init_declarations ',' init_declarator eq_initializer_opt
 347                        | error

 348  function_definition_head : function_head_declaration
 349                           | function_definition_head fun_arg_declaration

 350  fun_arg_declaration : declaration_specifiers ';'
 351                      | declaration_specifiers fun_arg_init_declarations ';'

 352  fun_arg_init_declarations : init_declarator eq_initializer_opt
 353                            | fun_arg_init_declarations ',' init_declarator eq_initializer_opt
 354                            | fun_arg_init_declarations ',' error

 355  function_head_declaration : declarator
 356                            | declaration_specifiers declarator

 357  Start_block :

 358  Stop_block :

 359  identifier : IDENTIFIER
 360             | TYPE_NAME

state 0
	$accept : . file $end  (0)
	_bef_ : .  (315)

	.  reduce 315

	file  goto 1
	_bef_  goto 2


state 1
	$accept : file . $end  (0)

	$end  accept


2: shift/reduce conflict (shift 3, reduce 96) on error
state 2
	file : _bef_ .  (329)
	file : _bef_ . cached_external_definition_list _bef_  (330)
	Sv_tmp : .  (96)

	error  shift 3
	$end  reduce 329
	TYPE_NAME  reduce 96
	STATIC  reduce 96
	CHAR  reduce 96
	CONST  reduce 96
	DOUBLE  reduce 96
	FLOAT  reduce 96
	INT  reduce 96
	LONG  reduce 96
	SHORT  reduce 96
	VOID  reduce 96
	VOLATILE  reduce 96
	TYPEDEF  reduce 96
	EXTERN  reduce 96
	AUTO  reduce 96
	REGISTER  reduce 96
	SIGNED  reduce 96
	UNSIGNED  reduce 96
	STRUCT  reduce 96
	UNION  reduce 96
	ENUM  reduce 96
	RESTRICT  reduce 96
	_ATOMIC  reduce 96
	_BOOL  reduce 96
	_THREADLOCAL  reduce 96
	_NORETURN  reduce 96
	ANONYME_MOD  reduce 96
	ASM_KEYWORD  reduce 96
	INLINE  reduce 96
	COMPL_TYPE_NAME  reduce 96
	COMPL_OTHER_NAME  reduce 96
	IDENTIFIER  reduce 96
	'('  reduce 96
	'*'  reduce 96
	';'  reduce 96

	Sv_tmp  goto 4
	cached_external_definition_list  goto 5
	external_definition  goto 6


state 3
	cached_external_definition_list : error .  (333)

	.  reduce 333


state 4
	external_definition : Sv_tmp . declaration_specifiers ';'  (334)
	external_definition : Sv_tmp . top_init_declarations ';'  (335)
	external_definition : Sv_tmp . function_definition_head $$14 compound_statement  (337)
	external_definition : Sv_tmp . EXTERN STRING_LITERAL external_definition  (338)
	external_definition : Sv_tmp . EXTERN STRING_LITERAL '{' cached_external_definition_list '}'  (339)
	external_definition : Sv_tmp . ASM_KEYWORD '(' expr ')' ';'  (340)
	external_definition : Sv_tmp . error compound_statement  (341)
	external_definition : Sv_tmp . error  (342)
	external_definition : Sv_tmp . ';'  (343)

	error  shift 7
	TYPE_NAME  shift 8
	STATIC  shift 9
	CHAR  shift 10
	CONST  shift 11
	DOUBLE  shift 12
	FLOAT  shift 13
	INT  shift 14
	LONG  shift 15
	SHORT  shift 16
	VOID  shift 17
	VOLATILE  shift 18
	TYPEDEF  shift 19
	EXTERN  shift 20
	AUTO  shift 21
	REGISTER  shift 22
	SIGNED  shift 23
	UNSIGNED  shift 24
	STRUCT  shift 25
	UNION  shift 26
	ENUM  shift 27
	RESTRICT  shift 28
	_ATOMIC  shift 29
	_BOOL  shift 30
	_THREADLOCAL  shift 31
	_NORETURN  shift 32
	ANONYME_MOD  shift 33
	ASM_KEYWORD  shift 34
	INLINE  shift 35
	COMPL_TYPE_NAME  shift 36
	COMPL_OTHER_NAME  shift 37
	IDENTIFIER  shift 38
	'('  shift 39
	'*'  shift 40
	';'  shift 41
	.  error

	identifier  goto 42
	struct_or_union  goto 43
	user_defined_type  goto 44
	pointer  goto 45
	storage_class_specifier  goto 46
	type_specifier1  goto 47
	type_modality_specifier  goto 48
	init_declarator  goto 49
	declarator  goto 50
	declarator2  goto 51
	top_init_declarations  goto 52
	declaration_specifiers  goto 53
	declaration_modality_specifiers  goto 54
	declaration_specifiers0  goto 55
	function_head_declaration  goto 56
	function_definition_head  goto 57
	type_specifier2  goto 58
	struct_or_union_specifier  goto 59
	struct_or_union_define_specifier  goto 60
	enum_specifier  goto 61
	enum_define_specifier  goto 62
	function_specifier  goto 63


state 5
	file : _bef_ cached_external_definition_list . _bef_  (330)
	cached_external_definition_list : cached_external_definition_list . _bef_ external_definition  (332)
	_bef_ : .  (315)

	.  reduce 315

	_bef_  goto 64


state 6
	cached_external_definition_list : external_definition .  (331)

	.  reduce 331


7: reduce/reduce conflict (reduce 342, reduce 347) on ';'
state 7
	external_definition : Sv_tmp error . compound_statement  (341)
	external_definition : Sv_tmp error .  (342)
	top_init_declarations : error .  (347)

	'{'  shift 65
	$end  reduce 342
	error  reduce 342
	TYPE_NAME  reduce 342
	STATIC  reduce 342
	CHAR  reduce 342
	CONST  reduce 342
	DOUBLE  reduce 342
	FLOAT  reduce 342
	INT  reduce 342
	LONG  reduce 342
	SHORT  reduce 342
	VOID  reduce 342
	VOLATILE  reduce 342
	TYPEDEF  reduce 342
	EXTERN  reduce 342
	AUTO  reduce 342
	REGISTER  reduce 342
	SIGNED  reduce 342
	UNSIGNED  reduce 342
	STRUCT  reduce 342
	UNION  reduce 342
	ENUM  reduce 342
	RESTRICT  reduce 342
	_ATOMIC  reduce 342
	_BOOL  reduce 342
	_THREADLOCAL  reduce 342
	_NORETURN  reduce 342
	ANONYME_MOD  reduce 342
	ASM_KEYWORD  reduce 342
	INLINE  reduce 342
	COMPL_TYPE_NAME  reduce 342
	COMPL_OTHER_NAME  reduce 342
	IDENTIFIER  reduce 342
	'('  reduce 342
	','  reduce 347
	'}'  reduce 342
	'*'  reduce 342
	';'  reduce 342

	compound_statement  goto 66


8: reduce/reduce conflict (reduce 105, reduce 360) on TYPE_NAME
8: reduce/reduce conflict (reduce 105, reduce 360) on STATIC
8: reduce/reduce conflict (reduce 105, reduce 360) on CHAR
8: reduce/reduce conflict (reduce 105, reduce 360) on CONST
8: reduce/reduce conflict (reduce 105, reduce 360) on DOUBLE
8: reduce/reduce conflict (reduce 105, reduce 360) on FLOAT
8: reduce/reduce conflict (reduce 105, reduce 360) on INT
8: reduce/reduce conflict (reduce 105, reduce 360) on LONG
8: reduce/reduce conflict (reduce 105, reduce 360) on SHORT
8: reduce/reduce conflict (reduce 105, reduce 360) on VOID
8: reduce/reduce conflict (reduce 105, reduce 360) on VOLATILE
8: reduce/reduce conflict (reduce 105, reduce 360) on TYPEDEF
8: reduce/reduce conflict (reduce 105, reduce 360) on EXTERN
8: reduce/reduce conflict (reduce 105, reduce 360) on AUTO
8: reduce/reduce conflict (reduce 105, reduce 360) on REGISTER
8: reduce/reduce conflict (reduce 105, reduce 360) on SIGNED
8: reduce/reduce conflict (reduce 105, reduce 360) on UNSIGNED
8: reduce/reduce conflict (reduce 105, reduce 360) on STRUCT
8: reduce/reduce conflict (reduce 105, reduce 360) on UNION
8: reduce/reduce conflict (reduce 105, reduce 360) on ENUM
8: reduce/reduce conflict (reduce 105, reduce 360) on RESTRICT
8: reduce/reduce conflict (reduce 105, reduce 360) on _ATOMIC
8: reduce/reduce conflict (reduce 105, reduce 360) on _BOOL
8: reduce/reduce conflict (reduce 105, reduce 360) on _THREADLOCAL
8: reduce/reduce conflict (reduce 105, reduce 360) on _NORETURN
8: reduce/reduce conflict (reduce 105, reduce 360) on ANONYME_MOD
8: reduce/reduce conflict (reduce 105, reduce 360) on INLINE
8: reduce/reduce conflict (reduce 105, reduce 360) on '('
8: reduce/reduce conflict (reduce 105, reduce 360) on ','
8: reduce/reduce conflict (reduce 105, reduce 360) on ')'
8: reduce/reduce conflict (reduce 105, reduce 360) on '['
8: reduce/reduce conflict (reduce 105, reduce 360) on ';'
state 8
	user_defined_type : TYPE_NAME .  (105)
	identifier : TYPE_NAME .  (360)

	TYPE_NAME  reduce 105
	STATIC  reduce 105
	CHAR  reduce 105
	CONST  reduce 105
	DOUBLE  reduce 105
	FLOAT  reduce 105
	INT  reduce 105
	LONG  reduce 105
	SHORT  reduce 105
	VOID  reduce 105
	VOLATILE  reduce 105
	TYPEDEF  reduce 105
	EXTERN  reduce 105
	AUTO  reduce 105
	REGISTER  reduce 105
	SIGNED  reduce 105
	UNSIGNED  reduce 105
	STRUCT  reduce 105
	UNION  reduce 105
	ENUM  reduce 105
	RESTRICT  reduce 105
	_ATOMIC  reduce 105
	_BOOL  reduce 105
	_THREADLOCAL  reduce 105
	_NORETURN  reduce 105
	ANONYME_MOD  reduce 105
	ASM_KEYWORD  reduce 360
	INLINE  reduce 105
	COMPL_TYPE_NAME  reduce 360
	COMPL_OTHER_NAME  reduce 105
	IDENTIFIER  reduce 105
	'('  reduce 105
	','  reduce 105
	')'  reduce 105
	'['  reduce 105
	'{'  reduce 360
	'*'  reduce 105
	':'  reduce 360
	'='  reduce 360
	';'  reduce 105


state 9
	storage_class_specifier : STATIC .  (132)

	.  reduce 132


state 10
	type_specifier1 : CHAR .  (143)

	.  reduce 143


state 11
	type_modality_specifier : CONST .  (136)

	.  reduce 136


state 12
	type_specifier1 : DOUBLE .  (150)

	.  reduce 150


state 13
	type_specifier1 : FLOAT .  (149)

	.  reduce 149


state 14
	type_specifier1 : INT .  (145)

	.  reduce 145


state 15
	type_specifier1 : LONG .  (146)

	.  reduce 146


state 16
	type_specifier1 : SHORT .  (144)

	.  reduce 144


state 17
	type_specifier1 : VOID .  (151)

	.  reduce 151


state 18
	type_modality_specifier : VOLATILE .  (138)

	.  reduce 138


state 19
	storage_class_specifier : TYPEDEF .  (130)

	.  reduce 130


state 20
	storage_class_specifier : EXTERN .  (131)
	external_definition : Sv_tmp EXTERN . STRING_LITERAL external_definition  (338)
	external_definition : Sv_tmp EXTERN . STRING_LITERAL '{' cached_external_definition_list '}'  (339)

	STRING_LITERAL  shift 67
	TYPE_NAME  reduce 131
	STATIC  reduce 131
	CHAR  reduce 131
	CONST  reduce 131
	DOUBLE  reduce 131
	FLOAT  reduce 131
	INT  reduce 131
	LONG  reduce 131
	SHORT  reduce 131
	VOID  reduce 131
	VOLATILE  reduce 131
	TYPEDEF  reduce 131
	EXTERN  reduce 131
	AUTO  reduce 131
	REGISTER  reduce 131
	SIGNED  reduce 131
	UNSIGNED  reduce 131
	STRUCT  reduce 131
	UNION  reduce 131
	ENUM  reduce 131
	RESTRICT  reduce 131
	_ATOMIC  reduce 131
	_BOOL  reduce 131
	_THREADLOCAL  reduce 131
	_NORETURN  reduce 131
	ANONYME_MOD  reduce 131
	INLINE  reduce 131
	COMPL_TYPE_NAME  reduce 131
	COMPL_OTHER_NAME  reduce 131
	IDENTIFIER  reduce 131
	'('  reduce 131
	'*'  reduce 131
	';'  reduce 131


state 21
	storage_class_specifier : AUTO .  (134)

	.  reduce 134


state 22
	storage_class_specifier : REGISTER .  (135)

	.  reduce 135


state 23
	type_specifier1 : SIGNED .  (147)

	.  reduce 147


state 24
	type_specifier1 : UNSIGNED .  (148)

	.  reduce 148


state 25
	struct_or_union : STRUCT .  (164)

	.  reduce 164


state 26
	struct_or_union : UNION .  (165)

	.  reduce 165


state 27
	enum_specifier : ENUM . enum_identifier  (176)
	enum_specifier : ENUM . '{' enumerator_list_comma '}'  (178)
	enum_define_specifier : ENUM . enum_identifier  (179)

	TYPE_NAME  shift 68
	COMPL_ENUM_NAME  shift 69
	IDENTIFIER  shift 38
	'{'  shift 70
	.  error

	identifier  goto 71
	enum_identifier  goto 72


state 28
	type_modality_specifier : RESTRICT .  (137)

	.  reduce 137


state 29
	type_modality_specifier : _ATOMIC .  (139)

	.  reduce 139


state 30
	type_specifier1 : _BOOL .  (152)

	.  reduce 152


state 31
	storage_class_specifier : _THREADLOCAL .  (133)

	.  reduce 133


state 32
	function_specifier : _NORETURN .  (156)

	.  reduce 156


state 33
	type_modality_specifier : ANONYME_MOD .  (140)

	.  reduce 140


state 34
	external_definition : Sv_tmp ASM_KEYWORD . '(' expr ')' ';'  (340)

	'('  shift 73
	.  error


state 35
	function_specifier : INLINE .  (155)

	.  reduce 155


state 36
	declaration_specifiers0 : COMPL_TYPE_NAME .  (117)

	.  reduce 117


state 37
	declarator2 : COMPL_OTHER_NAME .  (199)

	.  reduce 199


state 38
	identifier : IDENTIFIER .  (359)

	.  reduce 359


state 39
	declarator2 : '(' . declarator ')'  (193)

	TYPE_NAME  shift 68
	COMPL_OTHER_NAME  shift 37
	IDENTIFIER  shift 38
	'('  shift 39
	'*'  shift 40
	.  error

	identifier  goto 42
	pointer  goto 45
	declarator  goto 74
	declarator2  goto 51


state 40
	pointer : '*' .  (200)
	pointer : '*' . type_mod_specifier_list  (201)
	pointer : '*' . pointer  (202)
	pointer : '*' . type_mod_specifier_list pointer  (203)

	CONST  shift 11
	VOLATILE  shift 18
	RESTRICT  shift 28
	_ATOMIC  shift 29
	ANONYME_MOD  shift 33
	'*'  shift 40
	TYPE_NAME  reduce 200
	COMPL_OTHER_NAME  reduce 200
	IDENTIFIER  reduce 200
	'('  reduce 200
	','  reduce 200
	')'  reduce 200
	'['  reduce 200

	pointer  goto 75
	type_modality_specifier  goto 76
	type_mod_specifier_list  goto 77


state 41
	external_definition : Sv_tmp ';' .  (343)

	.  reduce 343


state 42
	declarator2 : identifier .  (192)

	.  reduce 192


state 43
	struct_or_union_specifier : struct_or_union . struct_identifier  (157)
	struct_or_union_define_specifier : struct_or_union . struct_identifier  (160)
	struct_or_union_define_specifier : struct_or_union .  (161)

	TYPE_NAME  shift 68
	COMPL_STRUCT_NAME  shift 78
	IDENTIFIER  shift 38
	'{'  reduce 161

	identifier  goto 79
	struct_identifier  goto 80


state 44
	declaration_specifiers0 : user_defined_type .  (106)

	.  reduce 106


state 45
	declarator : pointer . declarator2  (191)

	TYPE_NAME  shift 68
	COMPL_OTHER_NAME  shift 37
	IDENTIFIER  shift 38
	'('  shift 39
	.  error

	identifier  goto 42
	declarator2  goto 81


state 46
	declaration_modality_specifiers : storage_class_specifier .  (119)

	.  reduce 119


state 47
	declaration_specifiers0 : type_specifier1 .  (107)
